# game-solvers

./: .gitignore  README.md
Mancala/: mancala.py
Risk/: 1v1.txt  1v2.txt  1v3.txt  2v1.txt  2v2.txt  2v3.txt  3v1.txt  3v2.txt  3v3.txt  Node.py  Risk.py  filescript.py
Sudoku/: README.md  board.py  groups.py  old_board.py  options.py  runner.py  sudokuSolver.py
Sudoku/sudoku/: __init__.py  board.py  cell.py  constraints.py  graph.py  group.py  util.py
Sudoku/sudoku/boards/: samples.py
WikipediaGame/: WikiNode.py  WikipediaGame.py  backlinks.py  depth.py
WikipediaGameV2/: pyproject.toml
WikipediaGameV2/test/: test_WikipediaAPI.py  test_wikipedia_api.py
WikipediaGameV2/wikipedia-game-v2/: WikipediaAPI.py
WikipediaGameV2/wikipedia_game_v2/: WikipediaAPI.py  __main__.py  bfs_double_sided.py  bfs_inspectable.py  double_sided_bfs_search.py  graph.py  page.py  page_fetcher.py  page_file_cache.py  page_loader.py  wikipedia_api.py
wordfinder/: .gitignore  Makefile  QuadraticProbing.cpp  QuadraticProbing.h  QueueAr.h  boggle.cpp  boggle.h  set.cpp  set.h  substitution.cpp  substitution.h  wordfinder.cpp
