[tool.poetry]
name = "wikipedia-game-v2"
version = "0.1.0"
description = ""
authors = ["Ari Bolton <ariwbolton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
requests-cache = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
